--- a/train/colorize_eval.ipynb
+++ b/train/colorize_eval.ipynb
@@ -99,7 +99,8 @@
    ],
    "source": [
     "lpips_loss = LPIPS().to(\"cuda\")\n",
-    "dists_loss = DISTS().to(\"cuda\")"
+    "dists_loss = DISTS().to(\"cuda\")\n",
+    "gpu_mem_baseline = torch.cuda.memory_reserved(0)/1e6"
    ]
   },
   {
@@ -126,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def colorize_eval(sample):\n",
+    "def colorize_gpu(sample):\n",
     "    with torch.no_grad():\n",
     "        img = sample['image'].convert(\"RGB\")\n",
     "        y = PILToTensor()(img)\n",
@@ -155,9 +156,12 @@
     "        MSSIM = multi_scale_ssim(pred,y)\n",
     "        LPIPS_dB = -10*np.log10(lpips_loss(pred, y).item())\n",
     "        DISTS_dB = -10*np.log10(dists_loss(pred, y).item())\n",
+    "\n",
+    "        gpu_mem = gpu_mem = torch.cuda.memory_reserved(0)/1e6 - gpu_mem_baseline\n",
     "        return {\n",
     "            'colorized': colorized_bytes,\n",
     "            'time': elapsed_time,\n",
+    "            'gpu_mem': gpu_mem,\n",
     "            'PSNR': PSNR,\n",
     "            'MSSIM': MSSIM,\n",
     "            'LPIPS_dB': LPIPS_dB,\n",
@@ -174,7 +178,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fc11105b0754ebe95b17f9251e5fbbb",
+       "model_id": "95b288e8d75f4c29a1d6aa4ab07f7629",
        "version_major": 2,
        "version_minor": 0
       },
@@ -187,13 +191,13 @@
     }
    ],
    "source": [
-    "colorized = dataset_valid.map(colorize_eval)\n",
-    "colorized = colorized.cast_column('colorized',HFImage())"
+    "gpu = dataset_valid.map(colorize_gpu)\n",
+    "gpu = gpu.cast_column('colorized',HFImage())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "eb6f87aa-5bd8-4d1e-96b9-7523d8324de6",
    "metadata": {},
    "outputs": [],
@@ -224,25 +228,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "66abc20d-95c1-434b-94fa-28e7fdafcf62",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9e2b3bf6b024d119f580aae533d941f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/250 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "device = \"cpu\"\n",
     "model = model.to(device)\n",
@@ -251,24 +240,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "61ba80a9-20ed-408a-9283-c738ef6aed42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "combined = colorized.add_column('cpu_time',cpu['time'])"
+    "combined = gpu.add_column('cpu_time',cpu['time'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "7e44fc21-a116-485b-a510-f940b5c54f0b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cef38b96036b401a8131935ee6a1c33e",
+       "model_id": "e8dbb651026641f299f8d15524cb1179",
        "version_major": 2,
        "version_minor": 0
       },
@@ -282,7 +271,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a89d098810a494ab6661943b3135a80",
+       "model_id": "ea16ae8c2bb648ce8d0528eababe08fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -296,7 +285,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc67e1ae797b4fd491fb5a0c22f5c56e",
+       "model_id": "cf38b04f51934f7aa0b73fd5e94d7874",
        "version_major": 2,
        "version_minor": 0
       },
@@ -310,7 +299,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73dda63174f7486297e41f3645fbfbcb",
+       "model_id": "e1eec1596c4d42d49492d2b20e87c370",
        "version_major": 2,
        "version_minor": 0
       },
@@ -324,7 +313,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e33706387eea480e917f0fe298fa0f05",
+       "model_id": "ec10b930c47d492f90c7f4bb31d82c11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -338,10 +327,10 @@
     {
      "data": {
       "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/LSDIR_colorize_pixels_128_p8/commit/e3b1718ac2868387d8772cb6d8d30109dc4ee0a3', commit_message='Upload dataset', commit_description='', oid='e3b1718ac2868387d8772cb6d8d30109dc4ee0a3', pr_url=None, pr_revision=None, pr_num=None)"
+       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/LSDIR_colorize_pixels_128_p8/commit/20a872a89ef59814d5323b444c7f90daecb24486', commit_message='Upload dataset', commit_description='', oid='20a872a89ef59814d5323b444c7f90daecb24486', pr_url=None, pr_revision=None, pr_num=None)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
