--- a/train/colorize_table.ipynb
+++ b/train/colorize_table.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9dd51dae-6a66-491d-a654-80cb51e86ad6",
    "metadata": {},
    "outputs": [],
@@ -26,6 +26,8 @@
     "]\n",
     "metrics = [\n",
     "    'time',\n",
+    "    'cpu_time',\n",
+    "    'gpu_mem',\n",
     "    'PSNR',\n",
     "    'MSSIM',\n",
     "    'LPIPS_dB',\n",
@@ -52,19 +54,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6fb122cb-f4d9-4f2f-8056-96c191dc7560",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d09677aefed346d581167ee3dc817549",
+       "model_id": "328e68f54ff0471abb1db02be9b5902f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "README.md:   0%|          | 0.00/710 [00:00<?, ?B/s]"
+       "README.md:   0%|          | 0.00/785 [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -73,7 +75,63 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8298c331d7c445f9d2f188d999a3167",
+       "model_id": "2bdd7b3bab084d65aa2405e72ceee88f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "validation-00000-of-00002.parquet:   0%|          | 0.00/368M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b3c8d485681142fd9d8e32ed94a23315",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "validation-00001-of-00002.parquet:   0%|          | 0.00/366M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b571c5bb3d0b416fb395d8920671993b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating validation split:   0%|          | 0/250 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "77b034b93f9643ccb4f11594af14d683",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md:   0%|          | 0.00/785 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6c52e5ff65b34e018c23df78593ce0db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -87,7 +145,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd8758627c2648a4849aab2e1c5a6d3a",
+       "model_id": "c63a4a1da92b42608bfc85abc159aa86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -101,7 +159,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c69b66139db447baae4c86b55dedcb70",
+       "model_id": "e3ca87ec43d64f3293d8d59197ffdb01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -128,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a66e33de-bc2a-45c2-866c-6a6c8645dcdd",
    "metadata": {},
    "outputs": [
@@ -157,6 +215,8 @@
        "      <th>resolution</th>\n",
        "      <th>patch_size</th>\n",
        "      <th>time</th>\n",
+       "      <th>cpu_time</th>\n",
+       "      <th>gpu_mem</th>\n",
        "      <th>PSNR</th>\n",
        "      <th>MSSIM</th>\n",
        "      <th>LPIPS_dB</th>\n",
@@ -169,7 +229,9 @@
        "      <td>Pixels</td>\n",
        "      <td>512</td>\n",
        "      <td>32</td>\n",
-       "      <td>0.004779</td>\n",
+       "      <td>0.004806</td>\n",
+       "      <td>0.011288</td>\n",
+       "      <td>8226.045166</td>\n",
        "      <td>18.504796</td>\n",
        "      <td>0.825925</td>\n",
        "      <td>2.426913</td>\n",
@@ -180,7 +242,9 @@
        "      <td>Pixels</td>\n",
        "      <td>128</td>\n",
        "      <td>8</td>\n",
-       "      <td>0.004850</td>\n",
+       "      <td>0.004370</td>\n",
+       "      <td>0.010508</td>\n",
+       "      <td>8226.070331</td>\n",
        "      <td>17.655345</td>\n",
        "      <td>0.713271</td>\n",
        "      <td>1.760317</td>\n",
@@ -191,16 +255,16 @@
        "</div>"
       ],
       "text/plain": [
-       "     type  resolution  patch_size      time       PSNR     MSSIM  LPIPS_dB  \\\n",
-       "0  Pixels         512          32  0.004779  18.504796  0.825925  2.426913   \n",
-       "1  Pixels         128           8  0.004850  17.655345  0.713271  1.760317   \n",
+       "     type  resolution  patch_size      time  cpu_time      gpu_mem       PSNR  \\\n",
+       "0  Pixels         512          32  0.004806  0.011288  8226.045166  18.504796   \n",
+       "1  Pixels         128           8  0.004370  0.010508  8226.070331  17.655345   \n",
        "\n",
-       "   DISTS_dB  \n",
-       "0  6.225237  \n",
-       "1  5.096641  "
+       "      MSSIM  LPIPS_dB  DISTS_dB  \n",
+       "0  0.825925  2.426913  6.225237  \n",
+       "1  0.713271  1.760317  5.096641  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
