--- a/train/colorize_table.ipynb
+++ b/train/colorize_table.ipynb
@@ -21,8 +21,9 @@
    "outputs": [],
    "source": [
     "methods = [\n",
+    "    \"danjacobellis/LSDIR_colorize_pixels_128_p8\",\n",
+    "    \"danjacobellis/LSDIR_colorize_pixels_256_p16\",\n",
     "    \"danjacobellis/LSDIR_colorize_pixels_512_p32\",\n",
-    "    \"danjacobellis/LSDIR_colorize_pixels_128_p8\"\n",
     "]\n",
     "metrics = [\n",
     "    'time',\n",
@@ -35,15 +36,18 @@
     "]\n",
     "types = [\n",
     "    \"Pixels\",\n",
+    "    \"Pixels\",\n",
     "    \"Pixels\"\n",
     "]\n",
     "res = [\n",
+    "    128,\n",
+    "    256,\n",
     "    512,\n",
-    "    128\n",
     "]\n",
     "patch = [\n",
+    "    8,\n",
+    "    16,\n",
     "    32,\n",
-    "    8\n",
     "]\n",
     "columns = [\n",
     "    \"type\",\n",
@@ -57,120 +61,7 @@
    "execution_count": 3,
    "id": "6fb122cb-f4d9-4f2f-8056-96c191dc7560",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "328e68f54ff0471abb1db02be9b5902f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "README.md:   0%|          | 0.00/785 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2bdd7b3bab084d65aa2405e72ceee88f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "validation-00000-of-00002.parquet:   0%|          | 0.00/368M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3c8d485681142fd9d8e32ed94a23315",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "validation-00001-of-00002.parquet:   0%|          | 0.00/366M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b571c5bb3d0b416fb395d8920671993b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating validation split:   0%|          | 0/250 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77b034b93f9643ccb4f11594af14d683",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "README.md:   0%|          | 0.00/785 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c52e5ff65b34e018c23df78593ce0db",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "validation-00000-of-00002.parquet:   0%|          | 0.00/341M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c63a4a1da92b42608bfc85abc159aa86",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "validation-00001-of-00002.parquet:   0%|          | 0.00/339M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3ca87ec43d64f3293d8d59197ffdb01",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating validation split:   0%|          | 0/250 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_rows = []\n",
     "for im, method in enumerate(methods):\n",
@@ -227,19 +118,6 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Pixels</td>\n",
-       "      <td>512</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0.004806</td>\n",
-       "      <td>0.011288</td>\n",
-       "      <td>8226.045166</td>\n",
-       "      <td>18.504796</td>\n",
-       "      <td>0.825925</td>\n",
-       "      <td>2.426913</td>\n",
-       "      <td>6.225237</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Pixels</td>\n",
        "      <td>128</td>\n",
        "      <td>8</td>\n",
        "      <td>0.004370</td>\n",
@@ -250,18 +128,46 @@
        "      <td>1.760317</td>\n",
        "      <td>5.096641</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Pixels</td>\n",
+       "      <td>256</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0.004618</td>\n",
+       "      <td>0.010785</td>\n",
+       "      <td>8228.150706</td>\n",
+       "      <td>18.336289</td>\n",
+       "      <td>0.805834</td>\n",
+       "      <td>2.329059</td>\n",
+       "      <td>5.995810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Pixels</td>\n",
+       "      <td>512</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.004806</td>\n",
+       "      <td>0.011288</td>\n",
+       "      <td>8226.045166</td>\n",
+       "      <td>18.504796</td>\n",
+       "      <td>0.825925</td>\n",
+       "      <td>2.426913</td>\n",
+       "      <td>6.225237</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "     type  resolution  patch_size      time  cpu_time      gpu_mem       PSNR  \\\n",
-       "0  Pixels         512          32  0.004806  0.011288  8226.045166  18.504796   \n",
-       "1  Pixels         128           8  0.004370  0.010508  8226.070331  17.655345   \n",
+       "0  Pixels         128           8  0.004370  0.010508  8226.070331  17.655345   \n",
+       "1  Pixels         256          16  0.004618  0.010785  8228.150706  18.336289   \n",
+       "2  Pixels         512          32  0.004806  0.011288  8226.045166  18.504796   \n",
        "\n",
        "      MSSIM  LPIPS_dB  DISTS_dB  \n",
-       "0  0.825925  2.426913  6.225237  \n",
-       "1  0.713271  1.760317  5.096641  "
+       "0  0.713271  1.760317  5.096641  \n",
+       "1  0.805834  2.329059  5.995810  \n",
+       "2  0.825925  2.426913  6.225237  "
       ]
      },
      "execution_count": 4,
