--- a/train/colorize_eval.ipynb
+++ b/train/colorize_eval.ipynb
@@ -13,6 +13,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4415e33c-e354-414c-a495-f7613478ed18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://huggingface.co/danjacobellis/LCCL/resolve/main/colorize_pixels_256_p16.pth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0edb5b21-1d44-4ee7-a24b-b4971a1bc118",
    "metadata": {},
    "outputs": [],
@@ -56,7 +66,7 @@
    "outputs": [],
    "source": [
     "device = \"cuda\"\n",
-    "checkpoint = torch.load(\"colorize_pixels_128_p8.pth\",map_location=\"cpu\",weights_only=False)\n",
+    "checkpoint = torch.load(\"colorize_pixels_256_p16.pth\",map_location=\"cpu\",weights_only=False)\n",
     "config = checkpoint['config']\n",
     "model = MaxViT(\n",
     "    channels = config.channels,\n",
@@ -178,7 +188,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95b288e8d75f4c29a1d6aa4ab07f7629",
+       "model_id": "e33725c84cad4957b6c47c5a59bb0f55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +241,22 @@
    "execution_count": 8,
    "id": "66abc20d-95c1-434b-94fa-28e7fdafcf62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "49720726715a4f6b9444f55887d8a185",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/250 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "device = \"cpu\"\n",
     "model = model.to(device)\n",
@@ -257,7 +282,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8dbb651026641f299f8d15524cb1179",
+       "model_id": "3da1cb1b9c98422595a0e1661480583b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -271,7 +296,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea16ae8c2bb648ce8d0528eababe08fc",
+       "model_id": "b61749d710c24a6e992bf4fb85d63c6e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -285,7 +310,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf38b04f51934f7aa0b73fd5e94d7874",
+       "model_id": "149082a0ae9043fe8a239832f6c38d2d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -299,7 +324,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1eec1596c4d42d49492d2b20e87c370",
+       "model_id": "6a3c958aa4b6497badde6a86d4300d7b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -313,7 +338,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec10b930c47d492f90c7f4bb31d82c11",
+       "model_id": "d3c4b59cab30411582c3b2bac5b9650e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -327,7 +352,7 @@
     {
      "data": {
       "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/LSDIR_colorize_pixels_128_p8/commit/20a872a89ef59814d5323b444c7f90daecb24486', commit_message='Upload dataset', commit_description='', oid='20a872a89ef59814d5323b444c7f90daecb24486', pr_url=None, pr_revision=None, pr_num=None)"
+       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/LSDIR_colorize_pixels_256_p16/commit/63fb6761ea4633aadd1c5b870f6251dd13a01ccd', commit_message='Upload dataset', commit_description='', oid='63fb6761ea4633aadd1c5b870f6251dd13a01ccd', pr_url=None, pr_revision=None, pr_num=None)"
       ]
      },
      "execution_count": 10,
@@ -336,7 +361,7 @@
     }
    ],
    "source": [
-    "combined.push_to_hub(\"danjacobellis/LSDIR_colorize_pixels_128_p8\", split='validation')"
+    "combined.push_to_hub(\"danjacobellis/LSDIR_colorize_pixels_256_p16\", split='validation')"
    ]
   }
  ],
