--- a/train/colorize_table.ipynb
+++ b/train/colorize_table.ipynb
@@ -24,6 +24,7 @@
     "    \"danjacobellis/LSDIR_colorize_pixels_128_p8\",\n",
     "    \"danjacobellis/LSDIR_colorize_pixels_256_p16\",\n",
     "    \"danjacobellis/LSDIR_colorize_pixels_512_p32\",\n",
+    "    \"danjacobellis/LSDIR_colorize_walloc_x4_256_p16\"\n",
     "]\n",
     "metrics = [\n",
     "    'time',\n",
@@ -37,17 +38,20 @@
     "types = [\n",
     "    \"Pixels\",\n",
     "    \"Pixels\",\n",
-    "    \"Pixels\"\n",
+    "    \"Pixels\",\n",
+    "    \"WaLLoC (4x)\"\n",
     "]\n",
     "res = [\n",
     "    128,\n",
     "    256,\n",
     "    512,\n",
+    "    256\n",
     "]\n",
     "patch = [\n",
     "    8,\n",
     "    16,\n",
     "    32,\n",
+    "    16\n",
     "]\n",
     "columns = [\n",
     "    \"type\",\n",
@@ -58,10 +62,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6fb122cb-f4d9-4f2f-8056-96c191dc7560",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f09a4747279349d3808e301b9cf2981a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md:   0%|          | 0.00/965 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6369254c4f0347638042c9ee0f2f47f0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "validation-00000-of-00002.parquet:   0%|          | 0.00/359M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "96b8f5fdaa234f17bdd411e80b51431c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "validation-00001-of-00002.parquet:   0%|          | 0.00/357M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f509afa4049d4957b600645626db240a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating validation split:   0%|          | 0/250 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "data_rows = []\n",
     "for im, method in enumerate(methods):\n",
@@ -77,104 +138,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a66e33de-bc2a-45c2-866c-6a6c8645dcdd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>type</th>\n",
-       "      <th>resolution</th>\n",
-       "      <th>patch_size</th>\n",
-       "      <th>time</th>\n",
-       "      <th>cpu_time</th>\n",
-       "      <th>gpu_mem</th>\n",
-       "      <th>PSNR</th>\n",
-       "      <th>MSSIM</th>\n",
-       "      <th>LPIPS_dB</th>\n",
-       "      <th>DISTS_dB</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Pixels</td>\n",
-       "      <td>128</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0.004370</td>\n",
-       "      <td>0.010508</td>\n",
-       "      <td>8226.070331</td>\n",
-       "      <td>17.655345</td>\n",
-       "      <td>0.713271</td>\n",
-       "      <td>1.760317</td>\n",
-       "      <td>5.096641</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Pixels</td>\n",
-       "      <td>256</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0.004618</td>\n",
-       "      <td>0.010785</td>\n",
-       "      <td>8228.150706</td>\n",
-       "      <td>18.336289</td>\n",
-       "      <td>0.805834</td>\n",
-       "      <td>2.329059</td>\n",
-       "      <td>5.995810</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Pixels</td>\n",
-       "      <td>512</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0.004806</td>\n",
-       "      <td>0.011288</td>\n",
-       "      <td>8226.045166</td>\n",
-       "      <td>18.504796</td>\n",
-       "      <td>0.825925</td>\n",
-       "      <td>2.426913</td>\n",
-       "      <td>6.225237</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     type  resolution  patch_size      time  cpu_time      gpu_mem       PSNR  \\\n",
-       "0  Pixels         128           8  0.004370  0.010508  8226.070331  17.655345   \n",
-       "1  Pixels         256          16  0.004618  0.010785  8228.150706  18.336289   \n",
-       "2  Pixels         512          32  0.004806  0.011288  8226.045166  18.504796   \n",
-       "\n",
-       "      MSSIM  LPIPS_dB  DISTS_dB  \n",
-       "0  0.713271  1.760317  5.096641  \n",
-       "1  0.805834  2.329059  5.995810  \n",
-       "2  0.825925  2.426913  6.225237  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df"
    ]
