--- a/train/colorize_table.ipynb
+++ b/train/colorize_table.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6fb122cb-f4d9-4f2f-8056-96c191dc7560",
    "metadata": {},
    "outputs": [
@@ -138,10 +138,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a66e33de-bc2a-45c2-866c-6a6c8645dcdd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>resolution</th>\n",
+       "      <th>patch_size</th>\n",
+       "      <th>time</th>\n",
+       "      <th>cpu_time</th>\n",
+       "      <th>gpu_mem</th>\n",
+       "      <th>PSNR</th>\n",
+       "      <th>MSSIM</th>\n",
+       "      <th>LPIPS_dB</th>\n",
+       "      <th>DISTS_dB</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Pixels</td>\n",
+       "      <td>128</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.004370</td>\n",
+       "      <td>0.010508</td>\n",
+       "      <td>8226.070331</td>\n",
+       "      <td>17.655345</td>\n",
+       "      <td>0.713271</td>\n",
+       "      <td>1.760317</td>\n",
+       "      <td>5.096641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Pixels</td>\n",
+       "      <td>256</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0.004618</td>\n",
+       "      <td>0.010785</td>\n",
+       "      <td>8228.150706</td>\n",
+       "      <td>18.336289</td>\n",
+       "      <td>0.805834</td>\n",
+       "      <td>2.329059</td>\n",
+       "      <td>5.995810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Pixels</td>\n",
+       "      <td>512</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.004806</td>\n",
+       "      <td>0.011288</td>\n",
+       "      <td>8226.045166</td>\n",
+       "      <td>18.504796</td>\n",
+       "      <td>0.825925</td>\n",
+       "      <td>2.426913</td>\n",
+       "      <td>6.225237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>WaLLoC (4x)</td>\n",
+       "      <td>256</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0.004223</td>\n",
+       "      <td>0.009549</td>\n",
+       "      <td>8284.790587</td>\n",
+       "      <td>18.378464</td>\n",
+       "      <td>0.816831</td>\n",
+       "      <td>2.469780</td>\n",
+       "      <td>6.149699</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          type  resolution  patch_size      time  cpu_time      gpu_mem  \\\n",
+       "0       Pixels         128           8  0.004370  0.010508  8226.070331   \n",
+       "1       Pixels         256          16  0.004618  0.010785  8228.150706   \n",
+       "2       Pixels         512          32  0.004806  0.011288  8226.045166   \n",
+       "3  WaLLoC (4x)         256          16  0.004223  0.009549  8284.790587   \n",
+       "\n",
+       "        PSNR     MSSIM  LPIPS_dB  DISTS_dB  \n",
+       "0  17.655345  0.713271  1.760317  5.096641  \n",
+       "1  18.336289  0.805834  2.329059  5.995810  \n",
+       "2  18.504796  0.825925  2.426913  6.225237  \n",
+       "3  18.378464  0.816831  2.469780  6.149699  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df"
    ]
