--- a/train/colorize_walloc_eval.ipynb
+++ b/train/colorize_walloc_eval.ipynb
@@ -13,11 +13,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f28d1165-5526-45be-9844-d453f726aae9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://hf.co/danjacobellis/walloc/resolve/main/RGB_Li_12c_J3_nf8_v1.0.2.pth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1c291d86-d3e5-49df-bb59-c811b91e43c1",
    "metadata": {},
    "outputs": [],
    "source": [
     "!wget https://huggingface.co/danjacobellis/LCCL/resolve/main/colorize_walloc_4x_256_p16.pth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05c9037a-0efe-4a29-b88d-7b1d580e568a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://huggingface.co/danjacobellis/LCCL/resolve/main/colorize_walloc_16x_512_p32.pth"
    ]
   },
   {
@@ -58,7 +78,7 @@
    "source": [
     "device = \"cuda\"\n",
     "\n",
-    "checkpoint = torch.load(\"RGB_Li_48c_J3_nf8_v1.0.2.pth\",map_location=\"cpu\",weights_only=False)\n",
+    "checkpoint = torch.load(\"RGB_Li_12c_J3_nf8_v1.0.2.pth\",map_location=\"cpu\",weights_only=False)\n",
     "codec_config = checkpoint['config']\n",
     "codec = walloc.Codec2D(\n",
     "    channels = codec_config.channels,\n",
@@ -73,7 +93,7 @@
     "codec = codec.to(device)\n",
     "codec.eval();\n",
     "\n",
-    "checkpoint = torch.load(\"colorize_walloc_4x_256_p16.pth\",map_location=\"cpu\",weights_only=False)\n",
+    "checkpoint = torch.load(\"colorize_walloc_16x_512_p32.pth\",map_location=\"cpu\",weights_only=False)\n",
     "config = checkpoint['config']\n",
     "model = MaxViT(\n",
     "    channels = codec_config.latent_dim,\n",
@@ -211,7 +231,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64a381933d63460d8fa99ec5a1f23a0d",
+       "model_id": "74b85c3ad9e9442e981bfe4f02958eb6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -230,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "eb6f87aa-5bd8-4d1e-96b9-7523d8324de6",
    "metadata": {},
    "outputs": [],
@@ -278,14 +298,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "66abc20d-95c1-434b-94fa-28e7fdafcf62",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3846cce2b40047e7b0be728a93df7f96",
+       "model_id": "dd72504f6fea4db1a0f9473dcface7c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -306,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "61ba80a9-20ed-408a-9283-c738ef6aed42",
    "metadata": {},
    "outputs": [],
@@ -318,14 +338,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "7e44fc21-a116-485b-a510-f940b5c54f0b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e1311c8e7d44251ae2a5b0588b46678",
+       "model_id": "80234e406d1640e8a306a060eeaeb529",
        "version_major": 2,
        "version_minor": 0
       },
@@ -339,7 +359,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d3f21c9cb7a4bef8e384261a186f1f0",
+       "model_id": "caaa3c28b6454501b5dc4b8c009b4016",
        "version_major": 2,
        "version_minor": 0
       },
@@ -353,7 +373,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "806e60a5d2e84737842934badab95fcc",
+       "model_id": "c03e4654cae640578a6df977112181fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -367,7 +387,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2800c4efa7ef478ebc387013ad3d526a",
+       "model_id": "3fb392329e774be9a95ab83c9c58ffb2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -381,7 +401,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32ba3ffe57974ec09f0cde19a3d2b082",
+       "model_id": "81dd5df5a0474b80bb862a240404b172",
        "version_major": 2,
        "version_minor": 0
       },
@@ -395,16 +415,16 @@
     {
      "data": {
       "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/LSDIR_colorize_walloc_x4_256_p16/commit/37e81f517c934ee65f208403a09e43619a43b57e', commit_message='Upload dataset', commit_description='', oid='37e81f517c934ee65f208403a09e43619a43b57e', pr_url=None, pr_revision=None, pr_num=None)"
+       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/LSDIR_colorize_walloc_x16_512_p32/commit/2c61ca71b40868d5364b2c72bdc89ea6100d1c8e', commit_message='Upload dataset', commit_description='', oid='2c61ca71b40868d5364b2c72bdc89ea6100d1c8e', pr_url=None, pr_revision=None, pr_num=None)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "combined.push_to_hub(\"danjacobellis/LSDIR_colorize_walloc_x4_256_p16\", split='validation')"
+    "combined.push_to_hub(\"danjacobellis/LSDIR_colorize_walloc_x16_512_p32\", split='validation')"
    ]
   }
  ],
