--- a/train/colorize_table.ipynb
+++ b/train/colorize_table.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "9dd51dae-6a66-491d-a654-80cb51e86ad6",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,8 @@
     "    \"danjacobellis/LSDIR_colorize_pixels_128_p8\",\n",
     "    \"danjacobellis/LSDIR_colorize_pixels_256_p16\",\n",
     "    \"danjacobellis/LSDIR_colorize_pixels_512_p32\",\n",
-    "    \"danjacobellis/LSDIR_colorize_walloc_x4_256_p16\"\n",
+    "    \"danjacobellis/LSDIR_colorize_walloc_x4_256_p16\",\n",
+    "    \"danjacobellis/LSDIR_colorize_walloc_x16_512_p32\"\n",
     "]\n",
     "metrics = [\n",
     "    'time',\n",
@@ -39,19 +40,22 @@
     "    \"Pixels\",\n",
     "    \"Pixels\",\n",
     "    \"Pixels\",\n",
-    "    \"WaLLoC (4x)\"\n",
+    "    \"WaLLoC (4x)\",\n",
+    "    \"WaLLoC (16x)\"\n",
     "]\n",
     "res = [\n",
     "    128,\n",
     "    256,\n",
     "    512,\n",
-    "    256\n",
+    "    256,\n",
+    "    512,\n",
     "]\n",
     "patch = [\n",
     "    8,\n",
     "    16,\n",
     "    32,\n",
-    "    16\n",
+    "    16,\n",
+    "    32\n",
     "]\n",
     "columns = [\n",
     "    \"type\",\n",
@@ -62,67 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "6fb122cb-f4d9-4f2f-8056-96c191dc7560",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f09a4747279349d3808e301b9cf2981a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "README.md:   0%|          | 0.00/965 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6369254c4f0347638042c9ee0f2f47f0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "validation-00000-of-00002.parquet:   0%|          | 0.00/359M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96b8f5fdaa234f17bdd411e80b51431c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "validation-00001-of-00002.parquet:   0%|          | 0.00/357M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f509afa4049d4957b600645626db240a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating validation split:   0%|          | 0/250 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_rows = []\n",
     "for im, method in enumerate(methods):\n",
@@ -138,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "a66e33de-bc2a-45c2-866c-6a6c8645dcdd",
    "metadata": {},
    "outputs": [
@@ -228,25 +175,40 @@
        "      <td>2.469780</td>\n",
        "      <td>6.149699</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>WaLLoC (16x)</td>\n",
+       "      <td>512</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.004272</td>\n",
+       "      <td>0.011457</td>\n",
+       "      <td>8297.373499</td>\n",
+       "      <td>18.851549</td>\n",
+       "      <td>0.843759</td>\n",
+       "      <td>2.834188</td>\n",
+       "      <td>6.601486</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          type  resolution  patch_size      time  cpu_time      gpu_mem  \\\n",
-       "0       Pixels         128           8  0.004370  0.010508  8226.070331   \n",
-       "1       Pixels         256          16  0.004618  0.010785  8228.150706   \n",
-       "2       Pixels         512          32  0.004806  0.011288  8226.045166   \n",
-       "3  WaLLoC (4x)         256          16  0.004223  0.009549  8284.790587   \n",
+       "           type  resolution  patch_size      time  cpu_time      gpu_mem  \\\n",
+       "0        Pixels         128           8  0.004370  0.010508  8226.070331   \n",
+       "1        Pixels         256          16  0.004618  0.010785  8228.150706   \n",
+       "2        Pixels         512          32  0.004806  0.011288  8226.045166   \n",
+       "3   WaLLoC (4x)         256          16  0.004223  0.009549  8284.790587   \n",
+       "4  WaLLoC (16x)         512          32  0.004272  0.011457  8297.373499   \n",
        "\n",
        "        PSNR     MSSIM  LPIPS_dB  DISTS_dB  \n",
        "0  17.655345  0.713271  1.760317  5.096641  \n",
        "1  18.336289  0.805834  2.329059  5.995810  \n",
        "2  18.504796  0.825925  2.426913  6.225237  \n",
-       "3  18.378464  0.816831  2.469780  6.149699  "
+       "3  18.378464  0.816831  2.469780  6.149699  \n",
+       "4  18.851549  0.843759  2.834188  6.601486  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
