--- a/train/colorize_table.ipynb
+++ b/train/colorize_table.ipynb
@@ -22,9 +22,13 @@
    "source": [
     "methods = [\n",
     "    \"danjacobellis/LSDIR_colorize_pixels_128_p8\",\n",
+    "    # \"danjacobellis/LSDIR_colorize_walloc_x4_128_p8\",\n",
+    "    # \"danjacobellis/LSDIR_colorize_walloc_x16_128_p16\",\n",
     "    \"danjacobellis/LSDIR_colorize_pixels_256_p16\",\n",
-    "    \"danjacobellis/LSDIR_colorize_pixels_512_p32\",\n",
     "    \"danjacobellis/LSDIR_colorize_walloc_x4_256_p16\",\n",
+    "    # \"danjacobellis/LSDIR_colorize_walloc_x16_256_p16\",\n",
+    "    \"danjacobellis/LSDIR_colorize_pixels_512_p32\",\n",
+    "    \"danjacobellis/LSDIR_colorize_walloc_x4_512_p32\",\n",
     "    \"danjacobellis/LSDIR_colorize_walloc_x16_512_p32\"\n",
     "]\n",
     "metrics = [\n",
@@ -38,23 +42,36 @@
     "]\n",
     "types = [\n",
     "    \"Pixels\",\n",
-    "    \"Pixels\",\n",
+    "    # \"WaLLoC (4x)\",\n",
+    "    # \"WaLLoC (16x)\",\n",
     "    \"Pixels\",\n",
     "    \"WaLLoC (4x)\",\n",
-    "    \"WaLLoC (16x)\"\n",
+    "    # \"WaLLoC (16x)\",\n",
+    "    \"Pixels\",\n",
+    "    \"WaLLoC (4x)\",\n",
+    "    \"WaLLoC (16x)\",\n",
+    "\n",
     "]\n",
     "res = [\n",
     "    128,\n",
+    "    # 128,\n",
+    "    # 128,\n",
     "    256,\n",
+    "    256,\n",
+    "    # 256,\n",
     "    512,\n",
-    "    256,\n",
+    "    512,\n",
     "    512,\n",
     "]\n",
     "patch = [\n",
     "    8,\n",
+    "    # 8,\n",
+    "    # 8,\n",
     "    16,\n",
+    "    16,\n",
+    "    # 16,\n",
     "    32,\n",
-    "    16,\n",
+    "    32,\n",
     "    32\n",
     "]\n",
     "columns = [\n",
