--- a/train/colorize_walloc_eval.ipynb
+++ b/train/colorize_walloc_eval.ipynb
@@ -42,6 +42,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "28127011-dd0b-43c9-a322-74fac11cbecc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://huggingface.co/danjacobellis/LCCL/resolve/main/colorize_walloc_4x_512_p32.pth"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "2b73022d-e3f7-47b8-8fb6-cb7615d1445e",
    "metadata": {},
@@ -78,7 +88,7 @@
    "source": [
     "device = \"cuda\"\n",
     "\n",
-    "checkpoint = torch.load(\"RGB_Li_12c_J3_nf8_v1.0.2.pth\",map_location=\"cpu\",weights_only=False)\n",
+    "checkpoint = torch.load(\"RGB_Li_48c_J3_nf8_v1.0.2.pth\",map_location=\"cpu\",weights_only=False)\n",
     "codec_config = checkpoint['config']\n",
     "codec = walloc.Codec2D(\n",
     "    channels = codec_config.channels,\n",
@@ -93,7 +103,7 @@
     "codec = codec.to(device)\n",
     "codec.eval();\n",
     "\n",
-    "checkpoint = torch.load(\"colorize_walloc_16x_512_p32.pth\",map_location=\"cpu\",weights_only=False)\n",
+    "checkpoint = torch.load(\"colorize_walloc_4x_512_p32.pth\",map_location=\"cpu\",weights_only=False)\n",
     "config = checkpoint['config']\n",
     "model = MaxViT(\n",
     "    channels = codec_config.latent_dim,\n",
@@ -231,7 +241,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74b85c3ad9e9442e981bfe4f02958eb6",
+       "model_id": "80c50db027064c25954d90fb4b71ceb2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -305,7 +315,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd72504f6fea4db1a0f9473dcface7c0",
+       "model_id": "90e832c7fc484475b68e581c5ee1db4c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -338,14 +348,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "7e44fc21-a116-485b-a510-f940b5c54f0b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80234e406d1640e8a306a060eeaeb529",
+       "model_id": "337ed83df5ba4bd9b4ec65f2c670231c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -359,7 +369,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "caaa3c28b6454501b5dc4b8c009b4016",
+       "model_id": "7748eae9f2d744f69049e559a38ba2e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -373,7 +383,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c03e4654cae640578a6df977112181fa",
+       "model_id": "3fbde3caaf2546949eb0b592ecd61de5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -387,7 +397,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fb392329e774be9a95ab83c9c58ffb2",
+       "model_id": "d2f11a7807304c9b93568ffe4d59b6c4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -401,7 +411,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81dd5df5a0474b80bb862a240404b172",
+       "model_id": "e47fe6fb16a945b7b9ba05970bb0b5c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -415,16 +425,16 @@
     {
      "data": {
       "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/LSDIR_colorize_walloc_x16_512_p32/commit/2c61ca71b40868d5364b2c72bdc89ea6100d1c8e', commit_message='Upload dataset', commit_description='', oid='2c61ca71b40868d5364b2c72bdc89ea6100d1c8e', pr_url=None, pr_revision=None, pr_num=None)"
+       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/LSDIR_colorize_walloc_x4_512_p32/commit/847fc7755b75d7629d7c8620319eda2e44322b48', commit_message='Upload dataset', commit_description='', oid='847fc7755b75d7629d7c8620319eda2e44322b48', pr_url=None, pr_revision=None, pr_num=None)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "combined.push_to_hub(\"danjacobellis/LSDIR_colorize_walloc_x16_512_p32\", split='validation')"
+    "combined.push_to_hub(\"danjacobellis/LSDIR_colorize_walloc_x4_512_p32\", split='validation')"
    ]
   }
  ],
