--- a/train/colorize_table.ipynb
+++ b/train/colorize_table.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "9dd51dae-6a66-491d-a654-80cb51e86ad6",
    "metadata": {},
    "outputs": [],
@@ -83,10 +83,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "6fb122cb-f4d9-4f2f-8056-96c191dc7560",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5586986e97d44d64aae8636cea3df7fe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md:   0%|          | 0.00/965 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "707d03e2df394e7da68589a3a2ba2c74",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "validation-00000-of-00002.parquet:   0%|          | 0.00/370M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7ba8c226f602436ea9067fea6ca164cb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "validation-00001-of-00002.parquet:   0%|          | 0.00/368M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2263531f620b428c83b2316a82376701",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating validation split:   0%|          | 0/250 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "data_rows = []\n",
     "for im, method in enumerate(methods):\n",
@@ -102,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "a66e33de-bc2a-45c2-866c-6a6c8645dcdd",
    "metadata": {},
    "outputs": [
@@ -168,19 +225,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Pixels</td>\n",
-       "      <td>512</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0.004806</td>\n",
-       "      <td>0.011288</td>\n",
-       "      <td>8226.045166</td>\n",
-       "      <td>18.504796</td>\n",
-       "      <td>0.825925</td>\n",
-       "      <td>2.426913</td>\n",
-       "      <td>6.225237</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>WaLLoC (4x)</td>\n",
        "      <td>256</td>\n",
        "      <td>16</td>\n",
@@ -193,7 +237,33 @@
        "      <td>6.149699</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Pixels</td>\n",
+       "      <td>512</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.004806</td>\n",
+       "      <td>0.011288</td>\n",
+       "      <td>8226.045166</td>\n",
+       "      <td>18.504796</td>\n",
+       "      <td>0.825925</td>\n",
+       "      <td>2.426913</td>\n",
+       "      <td>6.225237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>WaLLoC (4x)</td>\n",
+       "      <td>512</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.004276</td>\n",
+       "      <td>0.011300</td>\n",
+       "      <td>8297.373499</td>\n",
+       "      <td>18.398811</td>\n",
+       "      <td>0.827451</td>\n",
+       "      <td>2.456711</td>\n",
+       "      <td>6.224286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
        "      <td>WaLLoC (16x)</td>\n",
        "      <td>512</td>\n",
        "      <td>32</td>\n",
@@ -213,19 +283,21 @@
        "           type  resolution  patch_size      time  cpu_time      gpu_mem  \\\n",
        "0        Pixels         128           8  0.004370  0.010508  8226.070331   \n",
        "1        Pixels         256          16  0.004618  0.010785  8228.150706   \n",
-       "2        Pixels         512          32  0.004806  0.011288  8226.045166   \n",
-       "3   WaLLoC (4x)         256          16  0.004223  0.009549  8284.790587   \n",
-       "4  WaLLoC (16x)         512          32  0.004272  0.011457  8297.373499   \n",
+       "2   WaLLoC (4x)         256          16  0.004223  0.009549  8284.790587   \n",
+       "3        Pixels         512          32  0.004806  0.011288  8226.045166   \n",
+       "4   WaLLoC (4x)         512          32  0.004276  0.011300  8297.373499   \n",
+       "5  WaLLoC (16x)         512          32  0.004272  0.011457  8297.373499   \n",
        "\n",
        "        PSNR     MSSIM  LPIPS_dB  DISTS_dB  \n",
        "0  17.655345  0.713271  1.760317  5.096641  \n",
        "1  18.336289  0.805834  2.329059  5.995810  \n",
-       "2  18.504796  0.825925  2.426913  6.225237  \n",
-       "3  18.378464  0.816831  2.469780  6.149699  \n",
-       "4  18.851549  0.843759  2.834188  6.601486  "
+       "2  18.378464  0.816831  2.469780  6.149699  \n",
+       "3  18.504796  0.825925  2.426913  6.225237  \n",
+       "4  18.398811  0.827451  2.456711  6.224286  \n",
+       "5  18.851549  0.843759  2.834188  6.601486  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
