--- a/train/colorize_walloc_eval.ipynb
+++ b/train/colorize_walloc_eval.ipynb
@@ -33,6 +33,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6d8a4185-7e6e-463c-ba64-845ae5844d59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://huggingface.co/danjacobellis/LCCL/resolve/main/colorize_walloc_16x_256_p16.pth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "05c9037a-0efe-4a29-b88d-7b1d580e568a",
    "metadata": {},
    "outputs": [],
@@ -88,7 +98,7 @@
    "source": [
     "device = \"cuda\"\n",
     "\n",
-    "checkpoint = torch.load(\"RGB_Li_48c_J3_nf8_v1.0.2.pth\",map_location=\"cpu\",weights_only=False)\n",
+    "checkpoint = torch.load(\"RGB_Li_12c_J3_nf8_v1.0.2.pth\",map_location=\"cpu\",weights_only=False)\n",
     "codec_config = checkpoint['config']\n",
     "codec = walloc.Codec2D(\n",
     "    channels = codec_config.channels,\n",
@@ -103,7 +113,7 @@
     "codec = codec.to(device)\n",
     "codec.eval();\n",
     "\n",
-    "checkpoint = torch.load(\"colorize_walloc_4x_512_p32.pth\",map_location=\"cpu\",weights_only=False)\n",
+    "checkpoint = torch.load(\"colorize_walloc_16x_256_p16.pth\",map_location=\"cpu\",weights_only=False)\n",
     "config = checkpoint['config']\n",
     "model = MaxViT(\n",
     "    channels = codec_config.latent_dim,\n",
@@ -241,7 +251,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80c50db027064c25954d90fb4b71ceb2",
+       "model_id": "8e9d4153a6ad495b9e9700b4b08f711c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -315,7 +325,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90e832c7fc484475b68e581c5ee1db4c",
+       "model_id": "047555b1f4b949648bc1a9577285581b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -355,7 +365,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "337ed83df5ba4bd9b4ec65f2c670231c",
+       "model_id": "3644bd97e5df43eabff4c085de623e9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -369,7 +379,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7748eae9f2d744f69049e559a38ba2e0",
+       "model_id": "bcf86616727b4112bbc1963fa35b0f04",
        "version_major": 2,
        "version_minor": 0
       },
@@ -383,7 +393,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fbde3caaf2546949eb0b592ecd61de5",
+       "model_id": "3fe97a23b8114e68bbad01e9211de6b6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -397,7 +407,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2f11a7807304c9b93568ffe4d59b6c4",
+       "model_id": "cda9c76976a24b529c14cdf51fca6ef2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -411,7 +421,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e47fe6fb16a945b7b9ba05970bb0b5c2",
+       "model_id": "3c3d1b7cb19e4289832d608e986de255",
        "version_major": 2,
        "version_minor": 0
       },
@@ -425,7 +435,7 @@
     {
      "data": {
       "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/LSDIR_colorize_walloc_x4_512_p32/commit/847fc7755b75d7629d7c8620319eda2e44322b48', commit_message='Upload dataset', commit_description='', oid='847fc7755b75d7629d7c8620319eda2e44322b48', pr_url=None, pr_revision=None, pr_num=None)"
+       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/LSDIR_colorize_walloc_x16_256_p16/commit/360e0fedfc4958d8fb4294bc74319203826cc84d', commit_message='Upload dataset', commit_description='', oid='360e0fedfc4958d8fb4294bc74319203826cc84d', pr_url=None, pr_revision=None, pr_num=None)"
       ]
      },
      "execution_count": 10,
@@ -434,7 +444,7 @@
     }
    ],
    "source": [
-    "combined.push_to_hub(\"danjacobellis/LSDIR_colorize_walloc_x4_512_p32\", split='validation')"
+    "combined.push_to_hub(\"danjacobellis/LSDIR_colorize_walloc_x16_256_p16\", split='validation')"
    ]
   }
  ],
