--- a/train/colorize_table.ipynb
+++ b/train/colorize_table.ipynb
@@ -26,7 +26,7 @@
     "    # \"danjacobellis/LSDIR_colorize_walloc_x16_128_p16\",\n",
     "    \"danjacobellis/LSDIR_colorize_pixels_256_p16\",\n",
     "    \"danjacobellis/LSDIR_colorize_walloc_x4_256_p16\",\n",
-    "    # \"danjacobellis/LSDIR_colorize_walloc_x16_256_p16\",\n",
+    "    \"danjacobellis/LSDIR_colorize_walloc_x16_256_p16\",\n",
     "    \"danjacobellis/LSDIR_colorize_pixels_512_p32\",\n",
     "    \"danjacobellis/LSDIR_colorize_walloc_x4_512_p32\",\n",
     "    \"danjacobellis/LSDIR_colorize_walloc_x16_512_p32\"\n",
@@ -46,7 +46,7 @@
     "    # \"WaLLoC (16x)\",\n",
     "    \"Pixels\",\n",
     "    \"WaLLoC (4x)\",\n",
-    "    # \"WaLLoC (16x)\",\n",
+    "    \"WaLLoC (16x)\",\n",
     "    \"Pixels\",\n",
     "    \"WaLLoC (4x)\",\n",
     "    \"WaLLoC (16x)\",\n",
@@ -58,7 +58,7 @@
     "    # 128,\n",
     "    256,\n",
     "    256,\n",
-    "    # 256,\n",
+    "    256,\n",
     "    512,\n",
     "    512,\n",
     "    512,\n",
@@ -69,7 +69,7 @@
     "    # 8,\n",
     "    16,\n",
     "    16,\n",
-    "    # 16,\n",
+    "    16,\n",
     "    32,\n",
     "    32,\n",
     "    32\n",
