--- a/train/colorize_table.ipynb
+++ b/train/colorize_table.ipynb
@@ -90,7 +90,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5586986e97d44d64aae8636cea3df7fe",
+       "model_id": "209d17a1fc764dba821f50ae67b2a554",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,12 +104,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "707d03e2df394e7da68589a3a2ba2c74",
+       "model_id": "cbd1a0c8226b40509fd2a0ce0f2464b8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "validation-00000-of-00002.parquet:   0%|          | 0.00/370M [00:00<?, ?B/s]"
+       "validation-00000-of-00002.parquet:   0%|          | 0.00/347M [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -118,12 +118,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ba8c226f602436ea9067fea6ca164cb",
+       "model_id": "cf889836a036406db75eea20d7a24d1d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "validation-00001-of-00002.parquet:   0%|          | 0.00/368M [00:00<?, ?B/s]"
+       "validation-00001-of-00002.parquet:   0%|          | 0.00/346M [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -132,7 +132,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2263531f620b428c83b2316a82376701",
+       "model_id": "d1bff82b8e114cbea4fc825ddcdb2c0c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -238,6 +238,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>WaLLoC (16x)</td>\n",
+       "      <td>256</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0.004104</td>\n",
+       "      <td>0.009512</td>\n",
+       "      <td>8284.790587</td>\n",
+       "      <td>17.999484</td>\n",
+       "      <td>0.754172</td>\n",
+       "      <td>2.020536</td>\n",
+       "      <td>5.552508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>Pixels</td>\n",
        "      <td>512</td>\n",
        "      <td>32</td>\n",
@@ -250,7 +263,7 @@
        "      <td>6.225237</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <td>WaLLoC (4x)</td>\n",
        "      <td>512</td>\n",
        "      <td>32</td>\n",
@@ -263,7 +276,7 @@
        "      <td>6.224286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>6</th>\n",
        "      <td>WaLLoC (16x)</td>\n",
        "      <td>512</td>\n",
        "      <td>32</td>\n",
@@ -284,17 +297,19 @@
        "0        Pixels         128           8  0.004370  0.010508  8226.070331   \n",
        "1        Pixels         256          16  0.004618  0.010785  8228.150706   \n",
        "2   WaLLoC (4x)         256          16  0.004223  0.009549  8284.790587   \n",
-       "3        Pixels         512          32  0.004806  0.011288  8226.045166   \n",
-       "4   WaLLoC (4x)         512          32  0.004276  0.011300  8297.373499   \n",
-       "5  WaLLoC (16x)         512          32  0.004272  0.011457  8297.373499   \n",
+       "3  WaLLoC (16x)         256          16  0.004104  0.009512  8284.790587   \n",
+       "4        Pixels         512          32  0.004806  0.011288  8226.045166   \n",
+       "5   WaLLoC (4x)         512          32  0.004276  0.011300  8297.373499   \n",
+       "6  WaLLoC (16x)         512          32  0.004272  0.011457  8297.373499   \n",
        "\n",
        "        PSNR     MSSIM  LPIPS_dB  DISTS_dB  \n",
        "0  17.655345  0.713271  1.760317  5.096641  \n",
        "1  18.336289  0.805834  2.329059  5.995810  \n",
        "2  18.378464  0.816831  2.469780  6.149699  \n",
-       "3  18.504796  0.825925  2.426913  6.225237  \n",
-       "4  18.398811  0.827451  2.456711  6.224286  \n",
-       "5  18.851549  0.843759  2.834188  6.601486  "
+       "3  17.999484  0.754172  2.020536  5.552508  \n",
+       "4  18.504796  0.825925  2.426913  6.225237  \n",
+       "5  18.398811  0.827451  2.456711  6.224286  \n",
+       "6  18.851549  0.843759  2.834188  6.601486  "
       ]
      },
      "execution_count": 4,
